# dual_manipulator_control

./: .gitignore  CMakeLists.txt  README.md  dual_manipulation_control.kdev4  package.xml
.kdev4/: dual_manipulation_control.kdev4
config/: hardware_interfaces.yaml  vito_controllers.yaml
include/dual_manipulation_control/: SingleRobot.hpp  force_position_control.hpp  ros_server.hpp  utils.hpp
launch/: display_with_cube.launch  manager.launch  rviz.launch  rviz_config.rviz
robot/: vito.urdf.xacro
src/: dual_robot_test.cpp  force_position_control.cpp  force_position_control_old.cpp  home.cpp  sensorized_object.cpp  single_robot_test.cpp
urdf/: cube2.urdf.xacro  cube3.urdf.xacro  spring.urdf.xacro  vito.urdf.xacro
worlds/: simple_environment.world
